# USI_Computational_Fab

Assignments/Assignment 1/Submission/: README.md
Assignments/Assignment 1/Submission/source/: main.cpp
Assignments/Assignment 1/a1/: a.out
Assignments/Assignment 1/source/: main.cpp
Assignments/Assignment 2/Part 1/: Assignment_2_Part1.stl  Assignment_2_Part1_OpenSCAD.scad  Assignment_2_Part1_OpenSCAD.stl  Untitled.scad
Assignments/Assignment 3/CF_A3/: Halftoning  README.md  halftoning.cpp  test_1_output_Dithering.pgm  test_1_output_Error_diffusion.pgm  test_2_output_Dithering.pgm  test_2_output_Error_diffusion.pgm
Project/: CMakeLists.txt  README.md  balance.cpp  balance.h  com.cpp  list3d.h  main.cpp  make_voxels.cpp  make_voxels.h  utils.cpp  utils.h
Project/objects/: humpty.stl  spheres.stl
Project/objects/balanced/: balanced_humpty.off  balanced_sphere.off
